--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/stylesheets/utilities.css" class="css">
     <link rel="stylesheet" href="assets/stylesheets/main.css" class="css">
     <link rel="stylesheet" href="assets/stylesheets/media.css" class="css">
-    <title>Document</title>
+    <title>Influencer Products</title>
 </head>
 <body>
     <!--Head Section Starts-->
